Infected, sick, dumb randomized by individual unit

--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -115,59 +115,106 @@
     name=new turn
     id=nfwm_random_status
     first_time_only=no
-    {VARIABLE_OP rand_status rand(1..10)}
 
-    [switch]
-        variable=rand_status
-        #sick wound
-        [case]
-            value=1,8
-            [modify_unit]
-                [filter]
-                    ability=nfw_sick_display
-                [/filter]
-                [effect]
-                    apply_to=status
-                    add=slowed
-                [/effect]
-            [/modify_unit]
-        [/case]
-        #infection wound
-        [case]
-            value=5
-            [modify_unit]
-                [filter]
-                    ability=nfw_infection_display
-                [/filter]
-                [effect]
-                    apply_to=status
-                    add=poisoned
-                [/effect]
-            [/modify_unit]
-        [/case]
-        #dumb wound
-        [case]
-            value=2,9
-            [modify_unit]
-                [filter]
-                    ability=dumb_display
-                [/filter]
-                [object]
-                    id=nfw_disable_attacks
-                    duration=turn end
-                    [effect]
-                        apply_to=image_mod
-                        replace=~CS(50,50,0)
-                    [/effect]
-                    [effect]
-                        apply_to=attack
-                        set_attacks=0
-                    [/effect]
-                [/object]
-            [/modify_unit]
-        [/case]
-    [/switch]
-    {CLEAR_VARIABLE rand_status}
+    [store_unit]
+        [filter]
+            ability=nfw_sick_display
+        [/filter]
+        variable=sick_units
+    [/store_unit]
+    [store_unit]
+        [filter]
+            ability=nfw_infection_display
+        [/filter]
+        variable=infected_units
+    [/store_unit]
+    [store_unit]
+        [filter]
+            ability=nfw_dumb_display
+        [/filter]
+        variable=dumb_units
+    [/store_unit]
+    #sick wound
+    [foreach]
+        array=sick_units
+        [do]
+            {VARIABLE_OP rand_status rand(1..10)}
+            [switch]
+                variable=rand_status
+                [case]
+                    value=1,8
+                    [modify_unit]
+                        [filter]
+                            id=$this_item.id
+                        [/filter]
+                        [effect]
+                            apply_to=status
+                            add=slowed
+                        [/effect]
+                    [/modify_unit]
+                [/case]
+            [/switch]
+        [/do]
+    [/foreach]
+    #infection wound
+    [foreach]
+        array=infected_units
+        [do]
+            {VARIABLE_OP rand_status rand(1..10)}
+            [switch]
+                variable=rand_status
+                [case]
+                    value=5
+                    [modify_unit]
+                        [filter]
+                            id=$this_item.id
+                        [/filter]
+                        [effect]
+                            apply_to=status
+                            add=poisoned
+                        [/effect]
+                    [/modify_unit]
+                [/case]
+            [/switch]
+        [/do]
+    [/foreach]
+    #dumb wound
+    [foreach]
+        array=dumb_units
+        [do]
+            {VARIABLE_OP rand_status rand(1..10)}
+            [switch]
+                variable=rand_status
+                [case]
+                    value=2,9
+                    [modify_unit]
+                        [filter]
+                            id=$this_item.id
+                        [/filter]
+                        [object]
+                            id=nfw_disable_attacks
+                            duration=turn end
+                            [effect]
+                                apply_to=image_mod
+                                replace=~CS(50,50,0)
+                            [/effect]
+                            [effect]
+                                apply_to=attack
+                                set_attacks=0
+                            [/effect]
+                        [/object]
+                    [/modify_unit]
+#ifdef LOTI_1_OR_2
+                    [update_stats]
+                        id=$this_item.id
+                    [/update_stats]
+#endif
+                [/case]
+            [/switch]
+        [/do]
+    [/foreach]
+
+    {CLEAR_VARIABLE rand_status,sick_units,infected_units,dumb_units}
 [/event]
 
 #removes advancements to level 2 ghosts
