Avoid duplication on funny wounds

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -933,8 +933,18 @@
         [/case]
         [case]
             value=3
-            {NFW_jinx_WOUND}
-            {VARIABLE nfw_already_wound yes}
+            [if]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        ability=nfw_jinx
+                    [/filter]
+                [/have_location]
+                [else]
+                    {NFW_jinx_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/else]
+            [/if]
         [/case]
         [case]
             value=7,8,9,10,11,12,13,14,15,16,17,18,19
@@ -947,6 +957,14 @@
                         [/has_attack]
                     [/filter]
                 [/have_location]
+                [not]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            ability=nfw_jinx
+                        [/filter]
+                    [/have_location]
+                [/not]
                 [then]
                     {NFW_jinx_WOUND}
                     {VARIABLE nfw_already_wound yes}
@@ -955,8 +973,18 @@
         [/case]
         [case]
             value=4
-            {NFW_dumb_WOUND}
-            {VARIABLE nfw_already_wound yes}
+            [if]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        ability=nfw_dumb_display
+                    [/filter]
+                [/have_location]
+                [else]
+                    {NFW_dumb_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/else]
+            [/if]
         [/case]
         [case]
             value=31,32,33,34,35,36,37,38,39,40,41,42,43
@@ -969,6 +997,14 @@
                         [/has_attack]
                     [/filter]
                 [/have_location]
+                [not]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            ability=nfw_dumb_display
+                        [/filter]
+                    [/have_location]
+                [/not]
                 [then]
                     {NFW_dumb_WOUND}
                     {VARIABLE nfw_already_wound yes}
@@ -977,13 +1013,33 @@
         [/case]
         [case]
             value=5
-            {NFW_angel_WOUND}
-            {VARIABLE nfw_already_wound yes}
+            [if]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        trait=nfw_elemental_angel
+                    [/filter]
+                [/have_location]
+                [else]
+                    {NFW_angel_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/else]
+            [/if]
         [/case]
         [case]
             value=6
-            {NFW_devil_WOUND}
-            {VARIABLE nfw_already_wound yes}
+            [if]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        trait=nfw_elemental_devil
+                    [/filter]
+                [/have_location]
+                [else]
+                    {NFW_devil_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/else]
+            [/if]
         [/case]
     [/switch]
 [/event]
