--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -463,8 +463,8 @@
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
 
 "+_"<b>Wounds list:</b>
-* <b><i>Paper cut</i></b> (-20% to all damage and -30% blade resistance) > All units, 2% chance
-* <b><i>Stepped on Lego</i></b> (-20% mp and -15% accuracy) > All units, 2% chance
+* <b><i>Paper cut</i></b> (-20% to all damage and -30% blade resistance) > All units, 2% chance, cumulative
+* <b><i>Stepped on Lego</i></b> (-20% mp and -15% accuracy) > All units, 2% chance, cumulative
 * <b><i>Idiotize</i></b> (20% probability of lost all his attacks every turn, will be displayed with a colored brown status) > All units, 2% chance - 25% with sling attack
 * <b><i>Jinx</i></b> (All adjacent units will do -50% damage) > All units, 2% chance - 25% with curse attack
 * <b><i>Go to Hell</i></b> (-50% damage and -50% arcane resistance, melee attacks changed to cold and ranged to fire, elemental trait, inmune to poison, drain and plague) > All units, 2% chance
