Fixed filtered controller

--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -45,7 +45,9 @@
                     formula=leader
                 [/or]
                 [or]
-                    controller=ai
+                    [filter_side]
+                        controller=ai
+                    [/filter_side]
                 [/or]
             [/not]
         [/filter]
@@ -78,7 +80,9 @@
                             id=$side_leader[0].id
                         [/or]
                         [or]
-                            controller=ai
+                            [filter_side]
+                                controller=ai
+                            [/filter_side]
                         [/or]
                     [/not]
                 [/filter]
