LOTI C05S03 Pirate death/surrender

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -6,6 +6,11 @@
 
 ## filter special characters
 
+[event]
+    name=prestart
+    {CLEAR_VARIABLE nfw_exclude_unit_id}
+[/event]
+
 #ifdef CAMPAIGN_DELFADORS_MEMOIRS
 [event]
     name=prestart
@@ -46,7 +51,7 @@
         id="Ro'Sothian","Ro'Arthian"
     [/filter]
     {VARIABLE nfw_already_wound yes}
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" color="100,255,100"}
 [/event]
 
 [event]
@@ -445,7 +450,7 @@
             [if]
                 {VARIABLE_CONDITIONAL have_lady equals 1}
                 [then]
-                    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Surrender" {NFW_COLOR_RED}}
+                    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Surrender" color="100,255,100"}
                 [/then]
                 [else]
                     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Escape" color="100,255,100"}
@@ -1054,6 +1059,7 @@
         image="misc/nfw-icon.png"
     [/message]
 [/event]
+
 # Units are killed in the victory event of the scenario, but it doesn't kill units on nfw_wounded, because it's right after. With this, all units of the undead army are eliminated.
 [event]
     name=prestart
@@ -1070,6 +1076,29 @@
         animate=no
         fire_event=no
     [/kill]
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_pirate_killed
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 03_Pirates}
+    [/filter_condition]
+    [filter]
+        id=enemy
+    [/filter]
+    [if]
+        {VARIABLE_CONDITIONAL thankful_enemy[0].id equals thankful_enemy}
+        [then]
+            {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Surrender" color="100,255,100"}
+        [/then]
+        [else]
+            {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Death" {NFW_COLOR_RED}}
+        [/else]
+    [/if]
+    {VARIABLE nfw_already_wound yes}
+    {VARIABLE nfw_exclude_unit_id enemy}
 [/event]
 #endif
 
