LOTI C05S05 Akula teleport

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1100,6 +1100,21 @@
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_exclude_unit_id enemy}
 [/event]
+
+[event]
+    name=last_breath
+    id=nfw_akula_teleport
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 05_We_Walk_in_the_Shadows}
+    [/filter_condition]
+    [filter]
+        id=Akula
+    [/filter]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Teleported" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+    {VARIABLE nfw_exclude_unit_id Akula}
+[/event]
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
