LOTI C05S06 Reorder Valhalla

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -160,6 +160,7 @@
         message=_ "<b><i>Non-Fatal Wounds:</i></b> Sister Thera and Father Morvin will revive each other indefinitely every time they lose all of their health. Choose if you want each time this happens to receive a wound like any other unit or not. The effects will be applied immediately, and they cannot receive capture, death, elemental, ghost, or undeath wounds."
         image="misc/nfw-icon.png"
         [option]
+            image=misc/nfw-arrow.png
             label=_ "Allows them to get wounds"
             default=yes
             [command]
@@ -167,6 +168,7 @@
             [/command]
         [/option]
         [option]
+            image=misc/nfw-arrow.png
             label=_ "Don't let them get wounds"
             # no action, just leave the default behavior
         [/option]
@@ -251,6 +253,7 @@
                 message=_ "<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Lenvan is alive, all your dead units will rise as undead regardless of cause of death. Choose if you want to lose them all forever or you prefer to let chance decide. You can still irretrievably lose your units forever if you are attacked by a unit with plague."
                 image="misc/nfw-icon.png"
                 [option]
+                    image=misc/nfw-arrow.png
                     label=_ "Disable Non-Fatal Wounds until Lord Lenvan dies"
                     default=yes
                     [command]
@@ -264,6 +267,7 @@
                     [/command]
                 [/option]
                 [option]
+                    image=misc/nfw-arrow.png
                     label=_ "Continues normal Non-Fatal Wounds behavior"
                     # no action, just leave the NFW enabled
                 [/option]
@@ -302,6 +306,7 @@
                 message= _ "<b><i>Non-Fatal Wounds:</i></b> Choose if you want units stranded on the other side of the bridge to always receive death wound or not. Units still on the recall list will die if the bridge is blown up. The rest will receive a wound according to the settings."
                 image="misc/nfw-icon.png"
                 [option]
+                    image=misc/nfw-arrow.png
                     label=_ "Kill all units stranded on the other side of the bridge"
                     default=yes
                     [command]
@@ -312,6 +317,7 @@
                     [/command]
                 [/option]
                 [option]
+                    image=misc/nfw-arrow.png
                     label=_ "Continues normal Non-Fatal Wounds behavior"
                     # no action, just leave the NFW enabled
                 [/option]
@@ -557,6 +563,7 @@
                     message=_ "<b><i>Non-Fatal Wounds:</i></b> in all of mainline Wesnoth, this scenario is probably the most evil act by the player’s own side. The scenario is called Costly Revenge, and for the story it’s meant to be costly to the elves as well as these innocent saurians."
                     image="misc/nfw-icon.png"
                     [option]
+                        image=misc/nfw-arrow.png
                         label=_ "Disable Non-Fatal Wounds and let the story proceed as expected"
                         default=yes
                         [command]
@@ -566,6 +573,7 @@
                         [/command]
                     [/option]
                     [option]
+                        image=misc/nfw-arrow.png
                         label=_ "Let all the elves survive"
                         # no action, just leave the NFW enabled
                     [/option]
@@ -1054,7 +1062,7 @@
         {VARIABLE_CONDITIONAL current_scenario_id equals 11_Invasion}
     [/filter_condition]
     [message]
-        message="<b><i>Non-Fatal Wounds:</i></b> All level 1 wounded loyal units in the undead army have been eliminated. Turned into ghost, elemental, angel, and devil are an exception."
+        message=_"<b><i>Non-Fatal Wounds:</i></b> All level 1 wounded loyal units in the undead army have been eliminated. Turned into ghost, elemental, angel, and devil are an exception."
         speaker=narrator
         image="misc/nfw-icon.png"
     [/message]
@@ -1114,6 +1122,161 @@
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Teleported" color="100,255,100"}
     {VARIABLE nfw_already_wound yes}
     {VARIABLE nfw_exclude_unit_id Akula}
+[/event]
+
+# Reorder the units in Valhalla/Valhalla2 variables, so that the top level units are stored first, so when called with Soulgate they appear first, in order.
+[event]
+    name=start
+    id=nfw_loti_valhalla_reorder
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 06_The_Real_Enemy}
+    [/filter_condition]
+    [message]
+        speaker=narrator
+        message=_ "<b><i>Non-Fatal Wounds:</i></b> Units from previous chapters are stored in Valhalla, in the order they were created and incorporated. When using Soulgate spell, they will be summoned in this same order, which may not be satisfying. You can reorder them so that they are first level 5 or higher, then level 4, then unique level 2 or 3 LOTI units at their highest level (such as the Monstrosity), then Doppelgangers, and finally the rest of the units in order of highest level to minor. In addition, all units that had any wounds will disappear forever, except ghosts, undead, elementals, devils and angels."
+        image="misc/nfw-icon.png"
+        [option]
+            image=misc/nfw-arrow.png
+            label=_ "Reorder units on Valhalla"
+            default=yes
+            [command]
+                [set_variables]
+                    name=Valhalla2
+                    mode=append
+                    to_variable=Valhalla
+                [/set_variables]
+                {CLEAR_VARIABLE Valhalla}
+                [foreach]
+                    array=Valhalla2
+                    [do]
+                        [unstore_unit]
+                            variable=this_item
+                            x,y=recall,recall
+                        [/unstore_unit]
+                        [modify_unit]
+                            [filter]
+                                id=$this_item.id
+                            [/filter]
+                            [set_variable]
+                                name=Valhalla
+                                value=yes
+                            [/set_variable]
+                        [/modify_unit]
+                    [/do]
+                [/foreach]
+                [kill]
+                    [filter_wml]
+                        [variables]
+                            Valhalla=yes
+                        [/variables]
+                    [/filter_wml]
+                    ability=nfw_coward_display,nfw_concussion_display,nfw_captured_unit_display,nfw_burned_display,nfw_broken_rib_display,nfw_broken_arm_display,nfw_broken_wing_display,nfw_broken_leg_display,nfw_burned_display,nfw_scared_of_weapon,nfw_scared_of_type,nfw_scared_of_light,nfw_scared_of_dark,nfw_frostbite_display,nfw_gash_display,nfw_fear_of_water_display,nfw_fear_of_hight_display,nfw_fear_of_cave_display,nfw_fear_of_plant_display,nfw_fear_of_open_display,nfw_fear_of_fog_display,nfw_infection_display,nfw_insanity_display,nfw_maimed_display,nfw_necrosis_display,nfw_amnesia_display,nfw_sick_display,nfw_wild_magic_display,nfw_damaged_display,nfw_paper_cut_display,nfw_lego_display,nfw_dumb_display
+                    animate=no
+                    fire_event=no
+                [/kill]
+                [store_unit]
+                    [filter]
+                        formula=level >= 5
+                        [filter_wml]
+                            [variables]
+                                Valhalla=yes
+                            [/variables]
+                        [/filter_wml]
+                    [/filter]
+                    variable=Valhalla
+                    mode=append
+                    kill=yes
+                [/store_unit]
+                [store_unit]
+                    [filter]
+                        level=4
+                        [filter_wml]
+                            [variables]
+                                Valhalla=yes
+                            [/variables]
+                        [/filter_wml]
+                        [not]
+                            type=Lethalia_doppelganger,Efraim_doppelganger
+                        [/not]
+                    [/filter]
+                    variable=Valhalla
+                    mode=append
+                    kill=yes
+                [/store_unit]
+                [store_unit]
+                    [filter]
+                        type=Monstrosity,Phantom,Zombie Rider,Lunatic Knight,Grim Knight,Pilum Master
+                        [filter_wml]
+                            [variables]
+                                Valhalla=yes
+                            [/variables]
+                        [/filter_wml]
+                    [/filter]
+                    variable=Valhalla
+                    mode=append
+                    kill=yes
+                [/store_unit]
+                [store_unit]
+                    [filter]
+                        type=Lethalia_doppelganger,Efraim_doppelganger
+                        [filter_wml]
+                            [variables]
+                                Valhalla=yes
+                            [/variables]
+                        [/filter_wml]
+                    [/filter]
+                    variable=Valhalla
+                    mode=append
+                    kill=yes
+                [/store_unit]
+                [store_unit]
+                    [filter]
+                        level=3
+                        [filter_wml]
+                            [variables]
+                                Valhalla=yes
+                            [/variables]
+                        [/filter_wml]
+                    [/filter]
+                    variable=Valhalla
+                    mode=append
+                    kill=yes
+                [/store_unit]
+                [store_unit]
+                    [filter]
+                        level=2
+                        [filter_wml]
+                            [variables]
+                                Valhalla=yes
+                            [/variables]
+                        [/filter_wml]
+                    [/filter]
+                    variable=Valhalla
+                    mode=append
+                    kill=yes
+                [/store_unit]
+                [store_unit]
+                    [filter]
+                        level=1
+                        [filter_wml]
+                            [variables]
+                                Valhalla=yes
+                            [/variables]
+                        [/filter_wml]
+                    [/filter]
+                    variable=Valhalla
+                    mode=append
+                    kill=yes
+                [/store_unit]
+                {CLEAR_VARIABLE Valhalla2}
+            [/command]
+        [/option]
+        [option]
+            image=misc/nfw-arrow.png
+            label=_ "Do not make changes to Valhalla"
+            # no action
+        [/option]
+    [/message]
 [/event]
 #endif
 
