LOTI Beelzebub escape

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -1278,6 +1278,18 @@
         [/option]
     [/message]
 [/event]
+
+[event]
+    name=last breath
+    id=nfw_beelzebub
+    first_time_only=no
+    [filter]
+        id=Beelzebub
+    [/filter]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Escape" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+    {VARIABLE nfw_exclude_unit_id Beelzebub}
+[/event]
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
