Experience > Max experience bug fix

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -19,6 +19,47 @@
     [/store_unit_type]
 [/event]
 
+# Avoid units to advance when have X+/X experience and receives an advancement included on the wound, covering cases with and without previous advancements
+[event]
+    name=last_breath
+    id=nfwm_over_max_exp
+    first_time_only=no
+    [filter]
+        formula="experience >= max_experience"
+    [/filter]
+    [if]
+        [have_location]
+            {EVENT_UNIT}
+            [filter]
+                [filter_wml]
+                    [advancement]
+                        glob_on_id=*
+                    [/advancement]
+                [/filter_wml]
+            [/filter]
+        [/have_location]
+        [or]
+            {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
+            [and]
+                {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
+            [/and]
+        [/or]
+        [then]
+            {NFW_short_term_memory_loss_WOUND}
+            {VARIABLE nfw_already_wound yes}
+        [/then]
+        [else]
+            [modify_unit]
+                {FILTER_EVENT_UNIT}
+                [effect]
+                    apply_to=experience
+                    set=0
+                [/effect]
+            [/modify_unit]
+        [/else]
+    [/if]
+[/event]
+
 # necromancy ability or similar
 [event]
     name=last_breath
