Semi-mechanical units support

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -223,7 +223,8 @@
 * <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random, cumulative, 10% - 30% with impact or arcane attack
 * <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative, 50%
 * <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, 100%
-* <b><i>Consume</i></b> (equivalent to death) > Not mechanical or undead, killed with soul catcher attack, 100%"
+* <b><i>Consume</i></b> (equivalent to death) > Not mechanical or undead, killed with soul catcher attack, 100%
+* Units with trait mechanical but a different race have a 33% chance of taking a wound as mechanical, and a 66% chance of taking a wound as the original race."
                     side_for=$side_number
                     image="misc/asheviere-defeated.webp"
                     {NFW_MENU_EXIT}
