--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -228,171 +228,109 @@
             trait=mechanical
         [/or]
     [/filter]
+    {VARIABLE_OP rand_wound_semihuman rand "1..3"}
     {VARIABLE_OP rand_wound rand "1..20"}
-    [switch]
-        variable=rand_wound
-        [case]
-            value=1,2,3,4
-            [if]
-                {VARIABLE_CONDITIONAL nfwe_deadundead greater_than 0}
-                [then]
-                    {NFW_destroyed_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/then]
-                [elseif]
-                    {NFW_wounds_ENABLED}
-                    [then]
-                        {NFW_damaged_WOUND}
-                        {VARIABLE nfw_already_wound yes}
-                    [/then]
-                [/elseif]
-            [/if]
-        [/case]
-    [/switch]
     [if]
-        {NFW_wounds_ENABLED}
-        [then]
+        [have_location]
+            {EVENT_UNIT}
+            [filter]
+                [not]
+                    race=mechanical
+                [/not]
+            [/filter]
+        [/have_location]
+        {VARIABLE_CONDITIONAL rand_wound_semihuman greater_than 1}
+        [else]
             [switch]
                 variable=rand_wound
                 [case]
-                    value=5,6,7
-                    {NFW_damaged_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/case]
-                [case]
-                    value=8,9
-                    {NFW_captured_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/case]
-                [case]
-                    value=10,11
-                    {NFW_rotten_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/case]
-
-                [case]
-                    value=12,13,14,15
+                    value=1,2,3,4
                     [if]
-                        {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
+                        {VARIABLE_CONDITIONAL nfwe_deadundead greater_than 0}
                         [then]
-                            {NFW_burned_WOUND}
+                            {NFW_destroyed_WOUND}
                             {VARIABLE nfw_already_wound yes}
                         [/then]
                         [elseif]
-                            {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
+                            {NFW_wounds_ENABLED}
                             [then]
-                                {NFW_frostbite_WOUND}
+                                {NFW_damaged_WOUND}
                                 {VARIABLE nfw_already_wound yes}
                             [/then]
                         [/elseif]
-                        [elseif]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=*^Ecf,*^Eb,Ql*,Mv*,Yl*
-                            [/have_location]
-                            [then]
-                                {NFW_burned_WOUND}
-                                {VARIABLE nfw_already_wound yes}
-                            [/then]
-                        [/elseif]
-                        [elseif]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=A*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
-                            [/have_location]
-                            [then]
-                                {NFW_frostbite_WOUND}
-                                {VARIABLE nfw_already_wound yes}
-                            [/then]
-                        [/elseif]
-                        [elseif]
-                            {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
-                            [or]
-                                {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
-                            [/or]
-                            [then]
-                                {NFW_rotten_WOUND}
-                                {VARIABLE nfw_already_wound yes}
-                            [/then]
-                        [/elseif]
-                        [elseif]
-                            {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
-                            [then]
-                                {NFW_gash_WOUND}
-                                {VARIABLE nfw_already_wound yes}
-                            [/then]
-                        [/elseif]
-                        [else]
-                            {NFW_damaged_WOUND}
-                            {VARIABLE nfw_already_wound yes}
-                        [/else]
                     [/if]
                 [/case]
-                [case]
-                    value=16,17,18,19,20
-                    [if]
-                        [have_location]
-                            {EVENT_UNIT}
-                            [filter]
-                                formula="experience > (max_experience / 1.5)"
-                            [/filter]
-                        [/have_location]
-                        [and]
-                            [have_location]
-                                {EVENT_UNIT}
-                                [filter]
-                                    [filter_wml]
-                                        [advancement]
-                                            glob_on_id=*
-                                        [/advancement]
-                                    [/filter_wml]
-                                [/filter]
-                            [/have_location]
-                            [or]
-                                {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
-                                [and]
-                                    {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
-                                [/and]
-                            [/or]
-                        [/and]
-                        [then]
-                            {NFW_short_term_memory_loss_WOUND}
+            [/switch]
+            [if]
+                {NFW_wounds_ENABLED}
+                [then]
+                    [switch]
+                        variable=rand_wound
+                        [case]
+                            value=5,6,7
+                            {NFW_damaged_WOUND}
                             {VARIABLE nfw_already_wound yes}
-                        [/then]
-                        [else]
+                        [/case]
+                        [case]
+                            value=8,9
+                            {NFW_captured_WOUND}
+                            {VARIABLE nfw_already_wound yes}
+                        [/case]
+                        [case]
+                            value=10,11
+                            {NFW_rotten_WOUND}
+                            {VARIABLE nfw_already_wound yes}
+                        [/case]
+
+                        [case]
+                            value=12,13,14,15
                             [if]
-                                [have_location]
-                                    {EVENT_UNIT}
-                                    [filter]
-                                        ability=nfw_amnesia_display
-                                    [/filter]
-                                [/have_location]
+                                {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
                                 [then]
-                                    {NFW_damaged_WOUND}
+                                    {NFW_burned_WOUND}
                                     {VARIABLE nfw_already_wound yes}
                                 [/then]
                                 [elseif]
-                                    {VARIABLE_CONDITIONAL rand_wound greater_than 18}
-                                    [and]
-                                        [have_location]
-                                            {EVENT_UNIT}
-                                            [filter]
-                                                [filter_wml]
-                                                    [advancement]
-                                                        glob_on_id=*
-                                                    [/advancement]
-                                                [/filter_wml]
-                                            [/filter]
-                                        [/have_location]
-                                        [or]
-                                            {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
-                                            [and]
-                                                {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
-                                            [/and]
-                                        [/or]
-                                    [/and]
+                                    {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
                                     [then]
-                                        {NFW_amnesia_WOUND}
+                                        {NFW_frostbite_WOUND}
+                                        {VARIABLE nfw_already_wound yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    [have_location]
+                                        {EVENT_UNIT}
+                                        terrain=*^Ecf,*^Eb,Ql*,Mv*,Yl*
+                                    [/have_location]
+                                    [then]
+                                        {NFW_burned_WOUND}
+                                        {VARIABLE nfw_already_wound yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    [have_location]
+                                        {EVENT_UNIT}
+                                        terrain=A*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
+                                    [/have_location]
+                                    [then]
+                                        {NFW_frostbite_WOUND}
+                                        {VARIABLE nfw_already_wound yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
+                                    [or]
+                                        {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
+                                    [/or]
+                                    [then]
+                                        {NFW_rotten_WOUND}
+                                        {VARIABLE nfw_already_wound yes}
+                                    [/then]
+                                [/elseif]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
+                                    [then]
+                                        {NFW_gash_WOUND}
                                         {VARIABLE nfw_already_wound yes}
                                     [/then]
                                 [/elseif]
@@ -401,12 +339,89 @@
                                     {VARIABLE nfw_already_wound yes}
                                 [/else]
                             [/if]
-                        [/else]
-                    [/if]
-                [/case]
-            [/switch]
-        [/then]
+                        [/case]
+                        [case]
+                            value=16,17,18,19,20
+                            [if]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        formula="experience > (max_experience / 1.5)"
+                                    [/filter]
+                                [/have_location]
+                                [and]
+                                    [have_location]
+                                        {EVENT_UNIT}
+                                        [filter]
+                                            [filter_wml]
+                                                [advancement]
+                                                    glob_on_id=*
+                                                [/advancement]
+                                            [/filter_wml]
+                                        [/filter]
+                                    [/have_location]
+                                    [or]
+                                        {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
+                                        [and]
+                                            {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
+                                        [/and]
+                                    [/or]
+                                [/and]
+                                [then]
+                                    {NFW_short_term_memory_loss_WOUND}
+                                    {VARIABLE nfw_already_wound yes}
+                                [/then]
+                                [else]
+                                    [if]
+                                        [have_location]
+                                            {EVENT_UNIT}
+                                            [filter]
+                                                ability=nfw_amnesia_display
+                                            [/filter]
+                                        [/have_location]
+                                        [then]
+                                            {NFW_damaged_WOUND}
+                                            {VARIABLE nfw_already_wound yes}
+                                        [/then]
+                                        [elseif]
+                                            {VARIABLE_CONDITIONAL rand_wound greater_than 18}
+                                            [and]
+                                                [have_location]
+                                                    {EVENT_UNIT}
+                                                    [filter]
+                                                        [filter_wml]
+                                                            [advancement]
+                                                                glob_on_id=*
+                                                            [/advancement]
+                                                        [/filter_wml]
+                                                    [/filter]
+                                                [/have_location]
+                                                [or]
+                                                    {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
+                                                    [and]
+                                                        {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
+                                                    [/and]
+                                                [/or]
+                                            [/and]
+                                            [then]
+                                                {NFW_amnesia_WOUND}
+                                                {VARIABLE nfw_already_wound yes}
+                                            [/then]
+                                        [/elseif]
+                                        [else]
+                                            {NFW_damaged_WOUND}
+                                            {VARIABLE nfw_already_wound yes}
+                                        [/else]
+                                    [/if]
+                                [/else]
+                            [/if]
+                        [/case]
+                    [/switch]
+                [/then]
+            [/if]
+        [/else]
     [/if]
+    {CLEAR_VARIABLE rand_wound_semihuman}
 [/event]
 
 # filter with death not mechanical
