Better fear of weapon filter

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -444,7 +444,7 @@ Face your fears and defeat them to try to overcome them."
                         id=nfw_scared_of_weapon_attacks
                         [filter_opponent]
                             [has_attack]
-                                name=$nfw_scary_weapon
+                                formula=contains_string(name,'$nfw_scary_weapon')
                             [/has_attack]
                         [/filter_opponent]
                         divide=2
@@ -453,7 +453,7 @@ Face your fears and defeat them to try to overcome them."
                         id=nfw_scared_of_weapon_chance
                         [filter_opponent]
                             [has_attack]
-                                name=$nfw_scary_weapon
+                                formula=contains_string(name,'$nfw_scary_weapon')
                             [/has_attack]
                         [/filter_opponent]
                         sub=30
