Fear of dark/light improved

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1420,6 +1420,100 @@
                     [/if]
                 [/case]
                 [case]
+                    value=48,77
+                    [if]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                ability=nfw_scared_of_dark
+                            [/filter]
+                        [/have_location]
+                        [or]
+                            [have_location]
+                                {EVENT_UNIT}
+                                [filter]
+                                    ability=nfw_scared_of_light
+                                [/filter]
+                            [/have_location]
+                        [/or]
+                        [else]
+                            [if]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    time_of_day=chaotic
+                                    [filter]
+                                        formula="alignment = lawful"
+                                    [/filter]
+                                [/have_location]
+                                [then]
+                                    {NFW_fear_of_dark_WOUND}
+                                    {VARIABLE rand_wound_selected yes}
+                                [/then]
+                                [elseif]
+                                    [have_location]
+                                        {EVENT_UNIT}
+                                        time_of_day=lawful
+                                    [/have_location]
+                                    [filter]
+                                        formula="alignment = chaotic"
+                                    [/filter]
+                                    [then]
+                                        {NFW_fear_of_light_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                            [/if]
+                        [/else]
+                    [/if]
+                [/case]
+                [case]
+                    value=100
+                    [if]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                ability=nfw_scared_of_dark
+                            [/filter]
+                        [/have_location]
+                        [or]
+                            [have_location]
+                                {EVENT_UNIT}
+                                [filter]
+                                    ability=nfw_scared_of_light
+                                [/filter]
+                            [/have_location]
+                        [/or]
+                        [else]
+                            [if]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    time_of_day=chaotic
+                                    [filter]
+                                        formula="alignment = liminal or alignment = lawful"
+                                    [/filter]
+                                [/have_location]
+                                [then]
+                                    {NFW_fear_of_dark_WOUND}
+                                    {VARIABLE rand_wound_selected yes}
+                                [/then]
+                                [elseif]
+                                    [have_location]
+                                        {EVENT_UNIT}
+                                        time_of_day=lawful
+                                    [/have_location]
+                                    [filter]
+                                        formula="alignment = liminal or alignment = chaotic"
+                                    [/filter]
+                                    [then]
+                                        {NFW_fear_of_light_WOUND}
+                                        {VARIABLE rand_wound_selected yes}
+                                    [/then]
+                                [/elseif]
+                            [/if]
+                        [/else]
+                    [/if]
+                [/case]
+                [case]
                     value=9,10
                     [if]
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
@@ -1771,7 +1865,7 @@
                     {VARIABLE rand_wound_selected yes}
                 [/case]
                 [case]
-                    value=46,47,48
+                    value=46,47
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1865,7 +1959,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value=73,74,75,76,77
+                    value=73,74,75,76
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -2221,7 +2315,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value=98,99,100
+                    value=98,99
                     [if]
                         [have_location]
                             {EVENT_UNIT}
