--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -129,7 +129,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Float text"+" → "+_"Set to"+": yes"
+                                text=_"Float text"+" → "+_"Set to"+_": yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -145,7 +145,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Float text"+" → "+_"Set to"+": no"
+                                text=_"Float text"+" → "+_"Set to"+_": no"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -173,7 +173,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Messages"+" → "+_"Set to"+": yes"
+                                text=_"Messages"+" → "+_"Set to"+_": yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -189,7 +189,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Messages"+" → "+_"Set to"+": no"
+                                text=_"Messages"+" → "+_"Set to"+_": no"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -391,7 +391,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Elementals"+" → "+_"Set to"+": yes"
+                                text=_"Elementals"+" → "+_"Set to"+_": yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -407,7 +407,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Elementals"+" → "+_"Set to"+": no"
+                                text=_"Elementals"+" → "+_"Set to"+_": no"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -489,7 +489,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Funny wounds"+" → "+_"Set to"+": yes"
+                                text=_"Funny wounds"+" → "+_"Set to"+_": yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -505,7 +505,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Funny wounds"+" → "+_"Set to"+": no"
+                                text=_"Funny wounds"+" → "+_"Set to"+_": no"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -547,7 +547,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"Wounds healing"+" → "+_"Set to"+": yes"
+                                text=_"Wounds healing"+" → "+_"Set to"+_": yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -563,7 +563,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"Wounds healing"+" → "+_"Set to"+": no"
+                                text=_"Wounds healing"+" → "+_"Set to"+_": no"
                                 size=24
                                 duration=5000
                                 color=255,0,0
@@ -679,7 +679,7 @@
                                 value=yes
                             [/set_variable]
                             [print]
-                                text=_"AMLA switch menu"+" → "+_"Set to"+": yes"
+                                text=_"AMLA switch menu"+" → "+_"Set to"+_": yes"
                                 size=24
                                 duration=5000
                                 color=0,255,255
@@ -698,7 +698,7 @@
                                 value=no
                             [/set_variable]
                             [print]
-                                text=_"AMLA switch menu"+" → "+_"Set to"+": no"
+                                text=_"AMLA switch menu"+" → "+_"Set to"+_": no"
                                 size=24
                                 duration=5000
                                 color=255,0,0
