Initial status of loti amla healing

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -764,4 +764,15 @@ This does not apply to any unit that the objectives require you to keep alive. E
         id=$unit.id
     [/update_stats]
 [/event]
+
+[event]
+    name=prestart
+    id=nfw_loti_amla_first_time
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_loti_amla_first not_equals yes}
+    [/filter_condition]
+    {VARIABLE nfw_loti_amla no}
+    {VARIABLE nfw_switch_menu no}
+    {VARIABLE nfw_loti_amla_first yes}
+[/event]
 #endif
